Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16339

bug in qmt may cause clients to hang in cl_sync_io_wait

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Bug in pool quotas that may cause write on a client to hang with following bt:

      [<ffffffffc0731da5>] cl_sync_io_wait+0x1c5/0x480 [obdclass]
      [<ffffffffc0732228>] cl_io_submit_sync+0x188/0x280 [obdclass]
      [<ffffffffc134735e>] vvp_io_commit_sync+0x10e/0x360 [lustre]
      [<ffffffffc1349a0a>] vvp_io_write_commit+0x3aa/0x5a0 [lustre]
      [<ffffffffc134a28b>] vvp_io_write_start+0x68b/0xd60 [lustre]
      [<ffffffffc072fe60>] cl_io_start+0x70/0x150 [obdclass]
      [<ffffffffc073251f>] cl_io_loop+0x9f/0x220 [obdclass]
      [<ffffffffc12edd96>] ll_file_io_generic+0x346/0xec0 [lustre]
      [<ffffffffc12eef66>] ll_file_aio_write+0x656/0xa50 [lustre]
      [<ffffffffc12ef471>] ll_file_write+0x111/0x1e0 [lustre]
      [<ffffffffb7041320>] vfs_write+0xc0/0x1f0
      [<ffffffffb704213f>] SyS_write+0x7f/0xf0
      [<ffffffffb7576ddb>] system_call_fastpath+0x22/0x27
      [<ffffffffffffffff>] 0xffffffffffffffff
      [root@dhcppc4 tests]# 
      

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: